vertical-align centre for search input on homepage (safari fix)

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -1111,6 +1111,7 @@ ul.collections li a .items-in-collection strong{
 	box-shadow:none!important;
 	width:auto;
 	width:225px;
+	line-height:1;
 	
 }
 
